edited intro slideshow, fixed dig deeper text alignment

--- a/impressions/local_static/css/application.css
+++ b/impressions/local_static/css/application.css
@@ -435,7 +435,8 @@ ul.dig-deeper-list img {
   max-width: 100%;
   padding: 2px; }
 ul.dig-deeper-list li {
-  padding: 0.8em 1.6em 1.6em 0; }
+  padding: 0.8em 1.6em 1.6em 0;
+  text-align: center; }
   @media screen and (max-width: 26.25em) {
     ul.dig-deeper-list li {
       float: left;
